--- a/tiny/templates/index.html
+++ b/tiny/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <video height="490" width="270" controls loop autoplay muted>
-  <source src="./static/shorts.mp4" type="video/mp4">
+  <source src="../static/shorts.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 </body>
